# funky_billliards

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs  systems.rs
client/src/game/: mod.rs  resources.rs
client/src/game/ball/: mod.rs
client/src/game/cuestick/: mod.rs  resources.rs  systems.rs
client/src/game/pocket/: components.rs  mod.rs  systems.rs
client/src/game/scoreboard/: systems.rs
client/src/game/ui/: components.rs  styles.rs
client/src/game/ui/pocket_set_up_menu/: components.rs
client/src/game/ui/pocket_set_up_menu/systems/: interactions.rs  layout.rs
client/src/game/ui/wall_set_up_menu/: events.rs  styles.rs
client/src/game/walls/: mod.rs  systems.rs
client/src/main_menu/: mod.rs  styles.rs
client/src/main_menu/systems/: layout.rs
client/src/test/: test_state_transitions.rs
server/: Cargo.toml
server/src/: main.rs
src/: components.rs  config.rs  main.rs  resources.rs  states.rs  styles.rs  systems.rs
src/game/: components.rs  mod.rs  resources.rs  systems.rs
src/game/ball/: components.rs  mod.rs  systems.rs
src/game/cue_stick/: components.rs  systems.rs
src/game/cuestick/: components.rs  mod.rs  resources.rs  systems.rs
src/game/pocket/: components.rs  mod.rs  systems.rs
src/game/scoreboard/: components.rs  mod.rs  resources.rs  styles.rs  systems.rs
src/game/ui/: mod.rs
src/game/walls/: components.rs  mod.rs  (+1 more)
src/main_menu/: mod.rs  styles.rs
src/menu/: components.rs  mod.rs  styles.rs
src/test/: test_state_transitions.rs
store/: Cargo.toml
store/src/: lib.rs
(+21 files in other folders)
