[package]
name = "funky_billiards"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.11.0"
bevy-inspector-egui = "0.19.0"
# bevy-inspector-egui-rapier = { version = "0.9.0" , features = [ "rapier2d" ] }
bevy_prototype_lyon = "0.9.0"
# bevy_rapier2d = "0.22.0"
bevy_xpbd_2d = "0.2.0"
itertools = "0.11.0"
# strum = "0.24.1"
