[package]
name = "client"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
store = { path = "../store" }
anyhow = "1.0"
bevy = "0.11.0"
bevy-inspector-egui = "0.19.0"
bevy_prototype_lyon = "0.9.0"
bevy_renet = "0.0.9"
bevy_xpbd_2d = "0.2.0"
itertools = "0.11.0"
renet = "0.0.13"
