[package]
name = "server"
version = "0.0.1"
edition = "2021"

[dependencies]
store = { path = "../store" }
serde = { version = "1", features = ["derive"] }
bincode = "1.3.1"
renet = "0.0.13"
log = "0.4"
env_logger="0.10.0"
bevy_renet = "0.0.9"
bevy_egui = "0.21.0"
bevy = "0.11.2"
renet_visualizer = "0.0.6"
